--- a/css/main.css
+++ b/css/main.css
@@ -942,7 +942,12 @@ section,
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
   background-color: var(--accent-color);
 }
-
+.button{
+  padding: 1rem 2rem;
+  background-color: gray;
+  border-radius: 2rem;
+  border: 1px solid black;
+}
 /*--------------------------------------------------------------
 # Contact Section
 --------------------------------------------------------------*/
