--- a/css/main.css
+++ b/css/main.css
@@ -947,6 +947,8 @@ section,
   background-color: gray;
   border-radius: 2rem;
   border: 1px solid black;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 /*--------------------------------------------------------------
 # Contact Section
