--- a/css/main.css
+++ b/css/main.css
@@ -162,7 +162,8 @@ h6 {
 
 .header .social-links a {
   font-size: 16px;
-  display: inline-flex;
+  display: flex;
+  gap: 0.5rem;
   align-items: center;
   justify-content: center;
   background: color-mix(in srgb, var(--default-color), transparent 90%);
