--- a/css/main.css
+++ b/css/main.css
@@ -161,7 +161,7 @@ h6 {
 }
 
 .header .social-links a {
-  font-size: 12px;
+  font-size: 15px;
   display: inline-flex;
   gap: 0.5rem;
   align-items: center;
@@ -178,6 +178,7 @@ h6 {
 
 /* WhatsApp */
 .bi-whatsapp {
+  background-color: white;
   color: #25d366;
 }
 .bi-whatsapp:hover {
@@ -186,6 +187,7 @@ h6 {
 
 /* Twitter (X) */
 .bi-twitter-x {
+  background-color: white;
   color: #000000;
 }
 .bi-twitter-x:hover {
@@ -194,6 +196,7 @@ h6 {
 
 /* TikTok */
 .bi-tiktok {
+  background-color: white;
   color: #010101;
 }
 .bi-tiktok:hover {
@@ -202,6 +205,7 @@ h6 {
 
 /* Facebook */
 .bi-facebook {
+  background-color: white;
   color: #1877f2;
 }
 .bi-facebook:hover {
@@ -210,6 +214,7 @@ h6 {
 
 /* Instagram (gradient) */
 .bi-instagram {
+  background-color: white;
   color: linear-gradient(45deg, #f58529, #dd2a7b, #8134af, #515bd4);
 }
 .bi-instagram:hover {
@@ -218,6 +223,7 @@ h6 {
 
 /* LinkedIn */
 .bi-linkedin {
+  background-color: white;
   color: #0a66c2;
 }
 .bi-linkedin:hover {
